--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 html,
 body {
+  font-size: 14px;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -28,5 +29,372 @@ a {
 $color-red : rgb(255, 0, 0);
 $color-white : #fff;
 $color-black : #000;
+
+//S//
+
+.layout_default {
+  position: relative;
+}
+.scroll_to_top {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  padding: 15px 15px 10px 15px;
+  border-radius: 50%;
+  transition: all ease-in-out 300ms;
+}
+.scroll_to_top:hover {
+  background-color: rgb(126, 126, 126, 0.3);
+  cursor: pointer;
+}
+
+//E//
+//S//
+
+.the_header {
+  background-color: antiquewhite;
+}
+.header_container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1280px;
+  background-color: aquamarine;
+}
+.header_logo_image {
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+}
+.header_box_desktop {
+  display: flex;
+  justify-content: space-between;
+}
+.header_menu_desktop {
+  background-color: rgb(224, 255, 254);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header_menu_desktop_item {
+  font-size: 1.1rem;
+  font-weight: 700;
+  margin: 0 3px;
+  padding: 10px 20px;
+  border: 2px solid rgb(224, 255, 254);
+  border-radius: 20px;
+  color: rgb(21, 63, 154, 0.8);
+}
+.header_menu_desktop_item:hover {
+  color: orange;
+  cursor: pointer;
+}
+.header_menu_desktop_active {
+  border: 2px solid rgb(21, 63, 154, 0.8);
+  transition: all ease-in-out 300ms;
+}
+.header_menu_desktop_active:hover {
+  border: 2px solid orange;
+}
+.header_menu_desktop_item_search_icons {
+  margin-left: 10px;
+  cursor: pointer;
+  transition: all ease-in-out 200ms;
+}
+.header_menu_desktop_item_search_icons:hover {
+  color: orange;
+}
+
+//     mobile
+.header_box_mobile {
+  display: none;
+}
+.menu_mobile_icon {
+  cursor: pointer;
+}
+.header_logo_mobile_image {
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+}
+.header_mobile_search {
+  cursor: pointer;
+}
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+//S//
+
+
+
+//E//
+
+@media screen and (max-width: 1300px) {
+  .header_container {
+    width: 100%;
+  }
+  .header_box_desktop {
+    padding: 0 40px 0 10px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .header_container {
+    width: 100%;
+  }
+  .header_box_desktop {
+    display: none;
+  }
+  .header_box_mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
